# ppass-generator

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml  release.yaml
src/new_pass/: generator.py
tests/: generator_test.py  generator_tests.py
