[tool.poetry]
name = "new-pass"
version = "1.0.0"
description = ""
authors = ["Mateusz Burcon <mburcon@sii.pl>"]
readme = "README.md"
packages = [{include = "new_pass", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.21.0"

[tool.poetry.scripts]
new-pass = "new_pass.generator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
